# backend/api/src/routes/auth.routes.ts
@@ -1,5 +1,6 @@
 import { Router } from "express";
-import { cerrarSesion, loginUser, refrescarToken } from "../controllers/auth.controllers.js";
+import { cerrarSesion, loginUser, obtenerUsuarioActual, refrescarToken } from "../controllers/auth.controllers.js";
+import { verificarToken } from "../middlewares/autenticacion.middleware.js";
 import { limiteLoginPorCuenta, limiteLoginPorIp, limiteRefresco } from "../middlewares/limiteTasa.middleware.js";
 import { validarCampos } from "../middlewares/validator.js";
 import { validarLogin } from "../validators/auth.validators.js";
@@ -9,5 +10,6 @@ const authRouter = Router();
 authRouter.post("/login", limiteLoginPorIp, limiteLoginPorCuenta, validarLogin, validarCampos, loginUser);
 authRouter.post("/refrescar", limiteRefresco, refrescarToken);
 authRouter.post("/cerrar-sesion", cerrarSesion);
+authRouter.get("/yo", verificarToken, obtenerUsuarioActual);
 
 export default authRouter;
